kubernetes/iot-processor-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: iot-processor
  name: iot-processor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iot-processor
  template:
    metadata:
      labels:
        app: iot-processor
    spec:
      containers:
      - name: iot-processor
        image: localhost:5000/sensorwave/iot-processor:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8090
            name: http
        readinessProbe:
          httpGet:
            port: http
            path: /api/iot-processor/q/health/ready
        livenessProbe:
          httpGet:
            port: http
            path: /api/iot-processor/q/health/live
