kubernetes/iot-security-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: iot-security
  name: iot-security
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iot-security
  template:
    metadata:
      labels:
        app: iot-security
    spec:
      containers:
      - name: iot-security
        image: localhost:5000/sensorwave/iot-security:latest
        ports:
          - containerPort: 8092
            name: http
        readinessProbe:
          httpGet:
            port: http
            path: /api/iot-security/q/health/ready
        livenessProbe:
          httpGet:
            port: http
            path: /api/iot-security/q/health/live
