kubernetes/keycloak-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: keycloak
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      volumes:
        - name: keycloak-config-volume
          hostPath:
            path: /keycloak
            type: Directory
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:21.0.2
        args:
          - start-dev
          - --import-realm
          - --hostname-url=http://keycloak:8080
          - --health-enabled=true
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
          - mountPath: /opt/keycloak/data/import
            name: keycloak-config-volume
            readOnly: true
        readinessProbe:
          httpGet:
            path: /health/ready
            port: http
        livenessProbe:
          httpGet:
            path: /health/live
            port: http
