kubernetes/mongodb-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mongodb
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      volumes:
        - name: mongodb-data
          persistentVolumeClaim:
            claimName: mongodb-data
      containers:
        - image: mongo:4.4
          name: mongodb
          volumeMounts:
            - mountPath: /data/db
              name: mongodb-data
          ports:
            - containerPort: 27017
