kubernetes/mosquitto-management-center-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto-management-center
  labels:
    app: mosquitto-management-center
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto-management-center
  template:
    metadata:
      name: mosquitto-management-center
      labels:
        app: mosquitto-management-center
    spec:
      containers:
        - name: mosquitto-management-center
          image: cedalo/management-center:2
          ports:
            - containerPort: 8088
              name: http
      restartPolicy: Always
