kubernetes/iot-processor-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: iot-processor
spec:
  selector:
    app: iot-processor
  ports:
    - name: http
      port: 8090
      targetPort: 8090
  type: ClusterIP
