kubernetes/iot-security-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: iot-security
spec:
  selector:
    app: iot-security
  ports:
    - name: http
      port: 8092
      targetPort: 8092
  type: ClusterIP
