kubernetes/keycloak-postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-keycloak
  labels:
    app: keycloak
spec:
  selector:
    app: keycloak
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: NodePort
