kubernetes/mongodb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongodb
  name: mongodb
  namespace: default
spec:
  ports:
    - name: http
      port: 27017
      targetPort: 27017
  selector:
    app: mongodb
  type: ClusterIP
