kubernetes/mosquitto-management-center-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-management-center
spec:
  selector:
    app: mosquitto-management-center
  ports:
    - protocol: TCP
      port: 8088
      targetPort: 8088
  type: NodePort
