kubernetes/positionstack-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: positionstack
subsets:
  - addresses:
      - ip: 104.21.65.172
    ports:
      - name: http
        port: 80
