kubernetes/positionstack-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: positionstack
spec:
  ports:
    - name: http
      port: 80
